Fixed alignment for embedded content.

--- a/assets/stylesheets/shared/_media.scss
+++ b/assets/stylesheets/shared/_media.scss
@@ -50,6 +50,12 @@ object {
 	@include caption;
 }
 
+.wp-embedded-content {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /*--------------------------------------------------------------
 ## Galleries
 --------------------------------------------------------------*/
